--- a/public/login.html
+++ b/public/login.html
@@ -3,24 +3,27 @@
 <html>
 
 	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
+		<title>Voting App</title>
 		
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
 		<div class="container">	
+		<a href="/signup" class="menu">Sign Up</a>
 			<div class="login">
-				<img src="/public/img/clementine_150.png" />
+				<img src="/public/img/voting_icon.png"  height="150" width="150"/>
 				<br />
-				<p class="clementine-text">Clementine.js</p>
-				<a href="/auth/github">
-					<div class="btn" id="login-btn">
-						<img src="/public/img/github_32px.png" alt="github logo" />
-						<p>LOGIN WITH GITHUB</p>
-					</div>
-				</a>
+				<p class="clementine-text">Voting App Login</p>
+				<form method="post" action="/login">
+		        <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+		        <p><input type="password" name="password" value="" placeholder="Password"></p>
+		        </p>
+		        <p class="submit"><input type="submit" name="commit" value="Login"></p>
+		      </form>
 			</div>
+			<br />
+			
 		</div>
 	</body>
 
