--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
+		<title>Voting App</title>
 		
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
@@ -17,23 +17,25 @@
 
 	<body>
 		<div class="container">
-			<img src="/public/img/clementine_150.png" />
+			<img src="/public/img/voting_icon.png" height="150" width="150"/>
 			<br />
-			<p class="clementine-text">Clementine.js</p>
+			<p class="clementine-text">Voting App</p>
 		</div>
 	
 		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
+			<p>What would you like to do today?<span id="click-nbr"></span></p>
 			<br />
 			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
+				<button type="submit" class="btn btn-add">New Poll</button>
+				<button class="btn btn-delete">My Polls</button>
 			</div>
 		</div>
-		
-		<script type="text/javascript" src="common/ajax-functions.js"></script>
+		<center><br /><div class="container text-center" id="newpoll">
+			
+		</div></center>
+		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<script type="text/javascript" src="controllers/clickController.client.js"></script>
-		<script type="text/javascript" src="controllers/userController.client.js"></script>
 	</body>
 
 </html>
