--- a/public/poll.html
+++ b/public/poll.html
@@ -18,6 +18,10 @@
 			</div>
 			</center>
 		</div>
+		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.js"></script>
+		<script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
 		<script type="text/javascript" src="/controllers/pollFormController.client.js"></script>
 	</body>
 
