--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Voting App</title>
+		<title>Pinterest App</title>
 		
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
@@ -11,9 +11,8 @@
 	<body>
 		<div class="container">	
 			<div class="login">
-				<img src="/public/img/voting_icon.png"  height="150" width="150"/>
 				<br />
-				<p class="clementine-text">Voting App Signup</p>
+				<p class="clementine-text">Pinterest App Signup</p>
 				<form method="post" action="signup">
 		        <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
 		        <p><input type="password" name="password" value="" placeholder="Password"></p>
