--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Voting App</title>
+		<title>Pinterest App</title>
 		
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
@@ -12,9 +12,8 @@
 		<div class="container">	
 		<a href="/signup" class="menu">Sign Up</a>
 			<div class="login">
-				<img src="/public/img/voting_icon.png"  height="150" width="150"/>
 				<br />
-				<p class="clementine-text">Voting App Login</p>
+				<p class="clementine-text">Pinterest App Login</p>
 				<form method="post" action="/login">
 		        <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
 		        <p><input type="password" name="password" value="" placeholder="Password"></p>
